# shelfscan

./: .gitattributes  .gitignore  LICENSE  README.md  app.py  hackathon_submission.md  main.py  packages.txt  pyproject.toml
.streamlit/: config.toml
auth/: auth.py  oauth.py
components/: styles.py  ui.py
core/: config.py
data/: cleaned_food_data.csv  feature_cols.txt  prepare_dataset.py  shelfscan.db
database/: db.py
ml/: health_model.py  image_classifier.py  predict.py  price_intelligence.py
services/: api.py  barcode.py
session/: session.py
tests/: test_api.py  test_barcode.py  test_health_model.py  test_price.py
utils/: auth.py  barcode.py
